--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
   "devDependencies": {
-    "eslint": "^7.32.0"
+    "eslint": "^7.32.0",
+    "nodemon": "^2.0.12"
   },
   "dependencies": {
     "eslint-config-prettier": "^8.3.0",
-    "koa": "^2.13.1"
+    "koa": "^2.13.1",
+    "koa-router": "^10.1.1"
+  },
+  "scripts": {
+    "start": "node src",
+    "start:dev": "nodemon --watch src/ src/index.js"
   }
 }
