--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,8 @@
 {
   "env": {
     "commonjs": true,
-    "browser": true,
-    "es2021": true
+    "es6": true,
+    "node": true
   },
   "extends": ["eslint:recommended", "prettier"],
   "globals": {
@@ -10,7 +10,7 @@
     "SharedArrayBuffer": "readonly"
   },
   "parserOptions": {
-    "ecmaVersion": 12,
+    "ecmaVersion": 2018,
     "sourceType": "module"
   },
   "rules": {
