--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "nodemon": "^2.0.12"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "eslint-config-prettier": "^8.3.0",
     "esm": "^3.2.25",
