--- a/blog-backend/package.json
+++ b/blog-backend/package.json
@@ -1,9 +1,22 @@
 {
-  "name": "blog-backend",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "nodemon": "^2.0.12"
+  },
   "dependencies": {
-    "koa": "^2.13.1"
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^10.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "esm": "^3.2.25",
+    "joi": "^17.4.2",
+    "jsonwebtoken": "^8.5.1",
+    "koa": "^2.13.1",
+    "koa-bodyparser": "^4.3.0",
+    "koa-router": "^10.1.1",
+    "mongoose": "^6.0.4"
+  },
+  "scripts": {
+    "start": "node -r esm src",
+    "start:dev": "nodemon --watch src/ -r esm src/index.js"
   }
 }
