--- a/blog-frontend/package.json
+++ b/blog-frontend/package.json
@@ -6,10 +6,14 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
+    "cors": "^2.8.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "redux-actions": "^2.6.5",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.0.1"
   },
@@ -38,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "http-proxy-middleware": "^0.19.1",
     "sass": "^1.39.0"
   }
 }
