--- a/blog-backend/package.json
+++ b/blog-backend/package.json
@@ -1,9 +1,11 @@
 {
   "devDependencies": {
     "eslint": "^7.32.0",
+    "http-proxy-middleware": "^2.0.1",
     "nodemon": "^2.0.12"
   },
   "dependencies": {
+    "@koa/cors": "^3.1.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "eslint-config-prettier": "^8.3.0",
