--- a/blog-frontend/package.json
+++ b/blog-frontend/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "redux-actions": "^2.6.5",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.0.1"
   },
