--- a/blog-frontend/package.json
+++ b/blog-frontend/package.json
@@ -8,12 +8,14 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "cors": "^2.8.5",
+    "immer": "^9.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "redux-actions": "^2.6.5",
+    "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.0.1"
