--- a/blog-frontend/package.json
+++ b/blog-frontend/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.1",
     "cors": "^2.8.5",
     "dart-sass": "^1.25.0",
+    "history": "4.10.1",
     "immer": "^9.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -18,6 +19,7 @@
     "redux-actions": "^2.6.5",
     "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.0.1"
   },
