--- a/blog-frontend/package.json
+++ b/blog-frontend/package.json
@@ -15,6 +15,7 @@
     "history": "4.10.1",
     "immer": "^9.0.6",
     "react": "^17.0.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.1",
