--- a/practice/blog-frontend/package.json
+++ b/practice/blog-frontend/package.json
@@ -5,14 +5,14 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.15",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "axios": "^0.21.1",
+    "axios": "^0.24.0",
     "cors": "^2.8.5",
     "dart-sass": "^1.25.0",
-    "history": "4.10.1",
+    "history": "^5.2.0",
     "immer": "^9.0.6",
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
